# hurricane-in-hawaii

./: .gitignore  game.py  main.py  pyproject.toml
data/levels/: 0.tmx  1.tmx  3.tmx  aware.tmx  final.tmx  runaway.tmx
data/objects/: backgrounds.tsx  next.tsx  tree.tsx
data/tileset/: tileset_dirt.tsx  tileset_forest.tsx
scripts/: clouds.py  helper.py  level.py  menu.py  player.py  scene.py  tile.py  tilemap.py  utils.py
scripts/common/: scene.py  tilemap.py  utils.py
scripts/levels/: aware.py  final.py  runaway.py
scripts/sprites/: clouds.py  debris.py  enemy.py  helper.py  player.py
scripts/ui/: menu.py
