[tool.poetry]
name = "py-game"
version = "0.1.0"
description = ""
authors = ["Lucas Garcia <lsglucas@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame-ce = "^2.3.2"
pytmx = "^3.32"
pyinstaller = "^6.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
